--- a/event/css/event.css
+++ b/event/css/event.css
@@ -40,10 +40,54 @@ nav a{
     color:black;
     text-decoration-line: none;
     font-size: 36px;
+    
+}
+.dropbtn {
+    background-color: white;
+    color: black;
+    border: none;
+    font-size: 24px;
+    margin:0px;
+    
+  }
+.dropdown {
+    position: relative;
+    display: inline-block;
+    color:black;
+    text-decoration-line: none;
+    font-size: 12px;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+    font-size: 12px;
+}  
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content a {
+    color: #707070;
+    padding:10px;
+    font-size :24px;
+    text-decoration: none;
+    display: block;
+  }
+img{
+    width:70%;
 }
 #block{
-    position: relative;
-
+    position: absolute;
+    z-index: -1;
     background-color: white;
     margin:0%;
     height:780px;
@@ -51,3 +95,70 @@ nav a{
     text-align: center;
     opacity:90%;
 }
+.part1{
+    display: inline-flex;
+    justify-content:space-between;
+    margin-right: 20%;
+    
+}
+
+.words1{
+    margin:80px;
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+.words2{
+    margin:80px;
+    font-size: 36px;
+    margin-top: 110px;
+    margin-bottom: 20px;
+}
+.part2{
+    display: inline-flex;
+    justify-content:space-between;
+    margin-right: 10%;
+    
+}
+.words3{
+    margin:80px;
+    font-size: 30px;
+    margin-top: 20px;
+}
+.words4{
+    margin:80px;
+    font-size: 36px;
+    margin-top: 5px;
+}
+
+#ball{
+    width:100px;
+    height:100px;
+    animation-name: spin;
+    animation-duration:2s;
+    animation-iteration-count: infinite;
+   
+    animation-timing-function: linear;
+    animation-delay: 0ms;
+    position:relative;
+    margin-left: 60%;
+}
+
+#dog{
+    position: relative;
+    top:-240px;
+    margin-right:30%;
+}
+
+@keyframes spin{
+   from{
+    transform-origin: 50px 35px;
+    
+   }
+   to{
+    transform:rotate(2turn)
+   }
+}
+
+    
+
+    
