--- a/event1/css/event.css
+++ b/event1/css/event.css
@@ -1,8 +1,6 @@
 *{ 
     margin:0px;
-    cursor:auto;
-   cursor:pointer;
-   cursor:url(../img/money-removebg-preview.png),auto;
+    
 }
 body{
     background-image: url(../img/forest.jpg);
@@ -43,6 +41,13 @@ nav a{
     text-decoration-line: none;
     font-size: 36px;
 }
+img{
+    width:70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
 .dropbtn {
     background-color: white;
     color: #707070;
@@ -54,7 +59,7 @@ nav a{
 .dropdown {
     position: relative;
     display: inline-block;
-   
+    
     text-decoration-line: none;
     font-size: 12px;
 
@@ -77,14 +82,14 @@ nav a{
     display: block;
 }
 .dropdown-content a {
-    color: 707070;
+    color: #707070;
     padding:10px;
     font-size :24px;
     text-decoration: none;
     display: block;
   }
 #block{
-    position: absolute;
+    position: relative;
     z-index: -1;
     background-color: white;
     margin:0%;
@@ -93,30 +98,70 @@ nav a{
     text-align: center;
     opacity:90%;
 }
-.dog{
-    width:350px;
-    height:350px;
-    background-image: url(../img/sad.jpeg);
-    margin:5%;
-
-}
-.dog:hover{
-    background-image:url(../img/happy.jpeg);
-}
-.clothes{
-    width:600px;
-    height:600px;
-    background-image:url(../img/clothes.png);
-    background-repeat: no-repeat;
-    align-content: center;
-    position: absolute;
-    margin-left: 50%;
-    top:0px;
+.part1{
+    display: inline-flex;
+    justify-content:space-between;
+    margin-right: 20%;
+    
 }
 
-.word{
-    position:absolute;
-    left:5%;
-    top:60%;
+.words1{
+    margin:80px;
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+.words2{
+    margin:80px;
     font-size: 36px;
+    margin-top: 110px;
+    margin-bottom: 20px;
 }
+.part2{
+    display: inline-flex;
+    justify-content:space-between;
+    margin-right: 10%;
+    
+}
+.words3{
+    margin:80px;
+    font-size: 30px;
+    margin-top: 20px;
+}
+.words4{
+    margin:80px;
+    font-size: 36px;
+    margin-top: 5px;
+}
+
+#ball{
+    width:100px;
+    height:100px;
+    animation-name: spin;
+    animation-duration:2s;
+    animation-iteration-count: infinite;
+   
+    animation-timing-function: linear;
+    animation-delay: 0ms;
+    position:relative;
+    margin-left: 60%;
+}
+
+#dog{
+    position: relative;
+    top:-240px;
+    margin-right:30%;
+}
+
+@keyframes spin{
+   from{
+    transform-origin: 50px 35px;
+    
+   }
+   to{
+    transform:rotate(2turn)
+   }
+}
+
+    
+
+    
