--- a/Story/css/story.css
+++ b/Story/css/story.css
@@ -37,17 +37,57 @@ nav{
 }
 
 nav a{
-    color:black;
+    color:#707070;
     text-decoration-line: none;
     font-size: 36px;
 }
+.dropbtn {
+    background-color: white;
+    color: #707070;
+    border: none;
+    font-size: 24px;
+    margin:0px;
+    
+  }
+.dropdown {
+    position: relative;
+    display: inline-block;
+    color:black;
+    text-decoration-line: none;
+    font-size: 12px;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+    font-size: 12px;
+}  
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content a {
+    color: black;
+    padding:10px;
+    font-size :24px;
+    text-decoration: none;
+    display: block;
+  }
 img{
     width:70%
 
 }
 #block{
-    position: relative;
-
+    position: absolute;
+    z-index: -1;
     background-color: white;
     margin:0%;
     height:780px;
@@ -55,3 +95,22 @@ img{
     text-align: center;
     opacity:90%;
 }
+.part1{
+    display: flex;
+    justify-content: center;
+}
+
+.words1{
+    margin:80px;
+    font-size: 48px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.words2{
+    font-size: 24px;
+    text-align: center;
+    width:60%;
+    margin:80px;
+    border: 2px solid #707070;
+}
+
