--- a/Story/css/story.css
+++ b/Story/css/story.css
@@ -25,6 +25,9 @@ nav{
     margin: 10px;
     margin-bottom: 0px;
 }
+#head1 img{
+    height:90%;
+    }
 #head2{
     display: inline-flex;
     flex-direction: row;
@@ -112,5 +115,10 @@ img{
     width:60%;
     margin:80px;
     border: 2px solid #707070;
+
+    font-family: calluna, serif;
+    font-style: normal;
+    font-weight: 300;
 }
+
 
