--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 *{ 
     margin:0px;
-    
+    box-sizing:border-box;
 }
 body{
     background-image: url(../img/forest.jpg);
@@ -23,32 +23,35 @@ nav{
     display: inline-flex;
     flex-direction: row;
     justify-content:space-between;
-    margin: 10px;
+    margin:  0.625em;
     margin-bottom: 0px;
     
+}
+#head1 img{
+height:90%;
 }
 #head2{
     display: inline-flex;
     flex-direction: row;
     justify-content:space-between;
-    margin:20px;
+    margin:1.25em;
     margin-bottom: 0px;
     
 }    
 #head2 h6{
-    margin-left:20px;
+    margin-left:1.25em;
 }
 
 nav a{
     color:#707070;
     text-decoration-line: none;
-    font-size: 36px;
+    font-size: 2.25em;
 }
 .dropbtn {
     background-color: white;
     color: #707070;
     border: none;
-    font-size: 24px;
+    font-size: 3.5em;
     margin:0px;
     
   }
@@ -57,7 +60,7 @@ nav a{
     display: inline-block;
     
     text-decoration-line: none;
-    font-size: 12px;
+    font-size: 0.75em;
 
 }
 
@@ -65,10 +68,10 @@ nav a{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 10em;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 2;
-    font-size: 12px;
+    font-size: 0.75em;
 }  
 
 .dropdown:hover .dropdown-content {
@@ -79,11 +82,15 @@ nav a{
 }
 .dropdown-content a {
     color: black;
-    padding:10px;
-    font-size :24px;
+    padding:0.625em;
+    font-size :1.5em;
     text-decoration: none;
     display: block;
   }
+body{
+    min-height: 100vh;
+    width:100%;
+}
 #block{
     position: absolute;
     z-index: -1;
@@ -91,7 +98,7 @@ nav a{
     margin-top:0px;
     margin-left:60%;
     margin-bottom:0%;
-    height:780px;
+    height:48.75em;
     width:40%;
     text-align: center;
     opacity:90%;
@@ -104,4 +111,18 @@ nav a{
 p{
     text-align: center;
     margin: 10%;
+    font-family: calluna, serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1.75em;
+}
+@media screen and (max-width:600px){
+    #block{
+        margin-left: 0%;
+        width:100%;
+        z-index:2;
+    }
+    #dog{
+        z-index: 1;
+    }
 }
